force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__AllowOutputAttachment__c.field-meta.xml
<CustomField>
    <fullName>Loop__AllowOutputAttachment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Allows the user to choose to store the DDP based on the Attach As field.</inlineHelpText>
    <label>Allow Document Storage</label>
    <type>Checkbox</type>
</CustomField>