force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Attach_As__c.field-meta.xml
<CustomField>
    <fullName>Loop__Attach_As__c</fullName>
    <inlineHelpText>Attachment will create a Salesforce attachment; LOOP Storage will create a document in the LOOP Storage interface; Content and Content - User Selected will create a Content document in the appropriate Workspace.</inlineHelpText>
    <label>Store As</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attachment</fullName>
            </value>
            <value>
                <fullName>LOOP Storage</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Content - User Selected</fullName>
            </value>
            <value>
                <fullName>FTP</fullName>
            </value>
            <value>
                <fullName>SpringCM</fullName>
            </value>
            <value>
                <fullName>Veeva Vault</fullName>
            </value>
            <value>
                <fullName>Office 365</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>