force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Decryption_Required__c.field-meta.xml
<CustomField>
    <fullName>Loop__Decryption_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Decryption is currently only supported with CipherCloud. Contact Drawloop to enable this for your organization.</description>
    <inlineHelpText>Decryption is currently only supported with CipherCloud. Contact Drawloop to enable this for your organization.</inlineHelpText>
    <label>Decryption Required</label>
    <type>Checkbox</type>
</CustomField>