force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Delivery_Data__c.field-meta.xml
<CustomField>
    <fullName>Loop__Delivery_Data__c</fullName>
    <label>Delivery Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>