force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__dsAllowEmailCustomizations__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsAllowEmailCustomizations__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, users will be able to change the subject and email text when running a DDP.</inlineHelpText>
    <label>Allow Subject and Email Changes</label>
    <type>Checkbox</type>
</CustomField>