force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__dsCustomFields__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsCustomFields__c</fullName>
    <inlineHelpText>This is a comma-semicolon delimited string: each field separated by a semicolon, each parameter per field separated by a comma. Example: &quot;custmFld1Name, custmFld1Val; custmFld2Name, &lt;&lt;Account_Id&gt;&gt;&quot;. This value is dynamic, see the DDP Output Filename help.</inlineHelpText>
    <label>Custom Envelope Fields</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>