force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__FTP__c.field-meta.xml
<CustomField>
    <fullName>Loop__FTP__c</fullName>
    <formula>IF( OR( ISPICKVAL( Loop__Attach_As__c , &quot;FTP&quot;), ISPICKVAL( Loop__Attach_As__c , &quot;SFTP&quot;) ) ,  IF( OR( ISBLANK( Loop__FTPDomain__c ) , ISBLANK( Loop__FTPUserName__c ) ) , &quot;None&quot; , Loop__FTPUserName__c &amp; &quot; @ &quot; &amp; IF( ISPICKVAL( Loop__Attach_As__c , &quot;SFTP&quot;), &quot;s&quot;, &quot;&quot;) &amp; &quot;ftp&quot; &amp; IF( Loop__SSL__c , &quot;s&quot; , &quot;&quot; ) &amp; &quot;://&quot; &amp; Loop__FTPDomain__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__smtpPassword?ftp=true&amp;id=&quot; &amp; Id &amp; IF( ISPICKVAL( Loop__Attach_As__c , &quot;SFTP&quot;), &quot;&amp;sftp=true&quot;, &quot;&quot;) , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; , &quot;None&quot; )</formula>
    <label>FTP</label>
    <type>Text</type>
</CustomField>