force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Limit_Availability__c.field-meta.xml
<CustomField>
    <fullName>Loop__Limit_Availability__c</fullName>
    <label>Limit Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Mass Only</fullName>
            </value>
            <value>
                <fullName>Mass Only</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>