force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Org_Wide_Email__c.field-meta.xml
<CustomField>
    <fullName>Loop__Org_Wide_Email__c</fullName>
    <formula>IF( ISBLANK( Loop__OrgWideEmailId__c ) ,
    IF( RecordType.Name = &apos;SMTP Service&apos;,
        IF( ISBLANK( Loop__OrgWideEmailName__c ),
            IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
                &quot;None&quot;,
                Loop__OrgWideEmailAddress__c ) ,
            Loop__OrgWideEmailName__c
                &amp; &quot; (&quot;
                &amp; IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
                    Loop__SMTPUserName__c ,
                    Loop__OrgWideEmailAddress__c )
                &amp; &quot;)&quot; ),
        &quot;None&quot; ),
    IF( ISBLANK( Loop__OrgWideEmailName__c ),
        IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
            Loop__OrgWideEmailId__c,
            Loop__OrgWideEmailAddress__c ),
        IF( ISBLANK( Loop__OrgWideEmailAddress__c ),
            Loop__OrgWideEmailName__c,
            Loop__OrgWideEmailName__c
                &amp; &quot; (&quot;
                &amp; Loop__OrgWideEmailAddress__c
                &amp; &quot;)&quot; ) ) )
&amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=orgwideemail&amp;cioId=&quot; &amp; Id, &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot;</formula>
    <label>Org-Wide Email</label>
    <type>Text</type>
</CustomField>