force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__SkipPreview__c.field-meta.xml
<CustomField>
    <fullName>Loop__SkipPreview__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically send the DDP to its destination (no PDF preview).</inlineHelpText>
    <label>Auto Send</label>
    <type>Checkbox</type>
</CustomField>