force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__SMTPUserName__c.field-meta.xml
<CustomField>
    <fullName>Loop__SMTPUserName__c</fullName>
    <label>User Name</label>
    <type>Email</type>
</CustomField>