force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Loop__Storage_Location__c</fullName>
    <formula>CASE( 
    Loop__Attach_As__c , 
    &quot;FTP&quot; , Loop__FTP__c , 
    &quot;SFTP&quot; , Loop__FTP__c , 
    &quot;Content&quot;,  Loop__Content_Workspace__c ,
    &quot;Content - User Selected&quot;,  Loop__Content_Workspace__c,
    &quot;Box&quot; ,         IF(  ISBLANK( Loop__Storage_Folder__c )  , &quot;Root&quot;, Loop__Storage_Folder__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageFolder&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; ,
    &quot;LOOP Storage&quot;, IF(  ISBLANK( Loop__Storage_Folder__c )  , &quot;Root&quot;, Loop__Storage_Folder__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageFolder&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; ,
    &quot;SpringCM&quot;,     IF(  ISBLANK( Loop__Storage_Folder__c )  , &quot;Root&quot;, Loop__Storage_Folder__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageFolder&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; ,
    &quot;Office 365&quot;,   IF(  ISBLANK( Loop__Storage_Folder__c )  , &quot;Root&quot;, Loop__Storage_Folder__c ) &amp; &quot; [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageFolder&amp;cioId=&quot; &amp; Id , &quot;Change&quot; , &quot;_self&quot; ) &amp; &quot;]&quot; ,
    &quot;Veeva Vault&quot;, &quot;Vault Options [&quot; &amp; HYPERLINK(&quot;/apex/loop__ddpEdit?type=storageData&amp;cioId=&quot; &amp; Id, &quot;Change&quot;, &quot;_self&quot;) &amp; &quot;]&quot;,
    &quot;&quot;
)</formula>
    <label>Storage Location</label>
    <type>Text</type>
</CustomField>