force-app/main/default/objects/Loop__DDP_Integration_Option__c/fields/Loop__Wait__c.field-meta.xml
<CustomField>
    <fullName>Loop__Wait__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If unchecked, the user does not see the processing screen while the DDP is being generated.</inlineHelpText>
    <label>Wait for document to process</label>
    <type>Checkbox</type>
</CustomField>