force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Attach.recordType-meta.xml
<RecordType>
    <fullName>Loop__Attach</fullName>
    <active>true</active>
    <description>Allows you to run a DDP to be attached to an object.</description>
    <label>Attach</label>
</RecordType>