force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__ContentDelivery.recordType-meta.xml
<RecordType>
    <fullName>Loop__ContentDelivery</fullName>
    <active>true</active>
    <description>Create an option to route this DDP to Content Delivery</description>
    <label>Content Delivery</label>
</RecordType>