force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Document_Queue.recordType-meta.xml
<RecordType>
    <fullName>Loop__Document_Queue</fullName>
    <active>true</active>
    <description>Allows the DDP to be sent to the Document Queue tab</description>
    <label>Document Queue</label>
</RecordType>