force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__DocuSign.recordType-meta.xml
<RecordType>
    <fullName>Loop__DocuSign</fullName>
    <active>true</active>
    <description>Create an option to route this DDP to DocuSign</description>
    <label>DocuSign</label>
</RecordType>