force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__EchoSign.recordType-meta.xml
<RecordType>
    <fullName>Loop__EchoSign</fullName>
    <active>true</active>
    <description>Create an option to route this DDP to EchoSign</description>
    <label>EchoSign</label>
</RecordType>