force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Lob.recordType-meta.xml
<RecordType>
    <fullName>Loop__Lob</fullName>
    <active>true</active>
    <description>Create an option to route this DDP to Lob</description>
    <label>Lob</label>
</RecordType>