force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__LOOP.recordType-meta.xml
<RecordType>
    <fullName>Loop__LOOP</fullName>
    <active>false</active>
    <description>Allows the DDP to be sent to the LOOP tab</description>
    <label>LOOP</label>
</RecordType>