force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__Sertifi.recordType-meta.xml
<RecordType>
    <fullName>Loop__Sertifi</fullName>
    <active>true</active>
    <description>Create an option to route this DDP to Sertifi</description>
    <label>Sertifi</label>
</RecordType>