force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__SignNow.recordType-meta.xml
<RecordType>
    <fullName>Loop__SignNow</fullName>
    <active>true</active>
    <description>Create an option to route this DDP to SignNow</description>
    <label>SignNow</label>
</RecordType>