force-app/main/default/objects/Loop__DDP_Integration_Option__c/recordTypes/Loop__SMTPService.recordType-meta.xml
<RecordType>
    <fullName>Loop__SMTPService</fullName>
    <active>true</active>
    <description>Create an option to automatically email this DDP through a 3rd party email account</description>
    <label>SMTP Service</label>
</RecordType>